# VibeSpace

./: Cargo.toml
.github/workflows/: vibe-swarm.yml
.llm-wiki/: WIKI_SCHEMA.md  index.md  log.md
.llm-wiki/pages/: ai-agent-system.md  crates-index.md  feature-flags.md  terminal-locking.md  vibe_swarm-crate.md  warpui-architecture.md
crates/: Cargo.toml
crates/src/: lib.rs
crates/vibe_swarm/: PROJECT_HANDOVER.md
crates/vibe_swarm/js/: element_picker.js
crates/vibe_swarm/src/: input_router.rs  lib.rs  message_bus.rs  swarm_controller.rs  workspace_preset.rs
